# split-ergo-board

./: .gitignore  HUnit.nix  LICENSE  Main.hs  OpenSCAD.nix  QuickCheck.nix  README  README.md  base.nix  cabal.project  release.nix  split-ergo-board.cabal  split-ergo-board.nix
src/: .Keyboard.hs.swp  Keyboard.hs  Main.hs
src/Keyboard/Components/: .KeyPlate.hs.swp  .KeySwitch.hs.swp  Battery.hs  KeyPlate.hs  KeySwitch.hs  PowerSwitch.hs  README.md
