name: split-ergo-board
version: 1.0.0
license: BSD3
license-file: LICENSE
cabal-version: >= 1.18
build-type: Simple

executable split_ergo_board
    main-is: Main.hs
    hs-source-dirs: src
    other-modules:
        Keyboard
        Keyboard.Components.PowerSwitch
        Keyboard.Components.KeyPlate
        Keyboard.Components.KeySwitch
    build-depends: base,
                   containers,
                   OpenSCAD,
                   QuickCheck >=2.1.0.3 && <2.8,
                   dsp
    default-language: Haskell2010
